.openshift/ng-library-client/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ng-library-client
spec:
  selector:
    app: ng-library-client
  ports:
    - name: http
      port: 4000
      targetPort: 4000
